# Android-app1

./: .gitignore  README.md  render.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/voicenotes/: MainActivity.kt  VoiceNotesApplication.kt
android/app/src/main/java/com/example/voicenotes/app/: AppContainer.kt
android/app/src/main/java/com/example/voicenotes/audio/: HoldToRecordController.kt
android/app/src/test/java/com/example/voicenotes/: AndroidManifestConfigurationTest.kt
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: notes.py
backend/app/providers/: __init__.py  factory.py  mock_data.py  openai_http.py
backend/app/providers/asr/: base.py  mock_provider.py  openai_provider.py  volcengine_standard_provider.py
backend/app/providers/cleanup/: __init__.py  base.py  mock_provider.py  openai_provider.py
backend/app/services/: __init__.py  audio_storage.py  note_job_service.py  suggestion_builder.py  text_segmentation.py
backend/app/store/: __init__.py  models.py  repository.py
backend/app/tests/: conftest.py  test_note_job_api.py  test_note_job_service.py  test_openai_providers.py  test_provider_registry.py  test_suggestion_builder.py  test_text_segmentation_and_suggestions.py  test_volcengine_providers.py
docs/superpowers/plans/: 2026-03-23-continuous-voice-notes-implementation.md
docs/superpowers/specs/: 2026-03-23-continuous-voice-notes-design.md
(+29 files in other folders)
