[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-notes-backend"
version = "0.1.0"
description = "Backend scaffold for the Voice Notes app"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pytest>=8.0",
  "uvicorn>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
